# timus_bad_code

./: 1009.cpp  1014.cpp  1018.cpp  1047.cpp  1073.cpp  1078.cpp  1112.cpp  1126.cpp  1184.cpp  1303.cpp  1471.cpp  1494.cpp  1613.cpp  1658.cpp  1987.cpp  CMakeLists.txt  LICENSE.txt
