cmake_minimum_required(VERSION 3.17)
project(timus)

set(CMAKE_CXX_STANDARD 14)

add_executable(f1014 1014.cpp)
add_executable(f1047 1047.cpp)
add_executable(f1112 1112.cpp)
add_executable(f1184 1184.cpp)
add_executable(f1303 1303.cpp)
add_executable(f1613 1613.cpp)
add_executable(f1126 1126.cpp)
add_executable(f1494 1494.cpp)
add_executable(f1471 1471.cpp)
add_executable(f1987 1987.cpp)

#add_executable(f1303m 1303\(m\).cpp)

target_sources(f1014 PRIVATE 1014.cpp)
target_sources(f1047 PRIVATE 1047.cpp)
target_sources(f1112 PRIVATE 1112.cpp)
target_sources(f1184 PRIVATE 1184.cpp)
target_sources(f1303 PRIVATE 1303.cpp)
target_sources(f1613 PRIVATE 1613.cpp)
target_sources(f1126 PRIVATE 1126.cpp)
target_sources(f1494 PRIVATE 1494.cpp)
target_sources(f1471 PRIVATE 1471.cpp)
target_sources(f1987 PRIVATE 1987.cpp)
#target_sources(f1303m PRIVATE 1303\(m\).cpp)